# Project_Django

./: .env.example  pyproject.toml
alex_2021/: manage.py
alex_2021/alex_2021/: asgi.py  settings.py  urls.py  wsgi.py
alex_2021/alex_2021/templates/: base.html
alex_2021/blog/: forms.py  models.py  urls.py  views.py
alex_2021/blog/migrations/: 0001_initial.py
alex_2021/blog/templates/: blog_detail.html
alex_2021/project/: models.py  urls.py  views.py
alex_2021/project/migrations/: 0001_initial.py
