[tool.poetry]
name = "alex-2021"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "alex_2021"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
